# Fam-Website

./: README.md  client.py  index.py  pyproject.toml  server.py  users.sqlite3
Sockets/: client.py  server.py
static/: javascript.js
static/css/: chat.css  style.css
static/js/: chat.js  javascript.js
templates/: TOS.html  base.html  chat.html  index.html  index.js  signup.html  views.html
